--- a/asvs-labs/Views/Profiles/Index.cshtml
+++ b/asvs-labs/Views/Profiles/Index.cshtml
@@ -1,27 +1,36 @@
-﻿@{
-    ViewData["Title"] = "Profiles";
+﻿@model asvslabs.ViewModels.ProfileViewModel;
+
+@{
+  ViewData["Title"] = "Profiles";
 }
 
+
+
 <section class="companies-info">
-    <div class="container">
-        <div class="company-title">
-            <h3>All specialists</h3>
-        </div><!--company-title end-->
-        <div class="companies-list">
-            <div class="row">
-                <div class="col-lg-3 col-md-4 col-sm-6 col-12">
-                    <div class="company_profile_info">
-                        <div class="company-up-info">
-                            <img src="http://via.placeholder.com/91x91" alt="">
-                            <h3>John Doe</h3>
-                            <h4>Graphic Designer</h4>
-                            <ul>
-                                <li><a href="#" title="" class="message-us"><i class="fa fa-envelope"></i></a></li>
-                            </ul>
-                        </div>
-                        <a href="#" title="" class="view-more-pro">View Profile</a>
-                    </div><!--company_profile_info end-->
-                </div>
-        </div><!--companies-list end-->
+  <div class="container">
+    <div class="company-title">
+      <h3>All specialists</h3>
+    </div><!--company-title end-->
+    <div class="companies-list">
+      <div class="row">
+        @foreach (var users in Model.UserList)
+        {
+
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+            <div class="company_profile_info">
+              <div class="company-up-info">
+
+                <img src="http://via.placeholder.com/91x91" alt="">
+                <h3>@Html.DisplayFor(x => x.UserName)</h3>
+                <ul>
+                  <li><a href="/Messages/@Html.DisplayFor(x => users.userId)" title="" class="message-us"><i class="fa fa-envelope"></i></a></li>
+                </ul>
+              </div>
+            </div><!--company_profile_info end-->
+
+          </div>
+        }
+      </div>
+
     </div>
 </section><!--companies-info end-->
