--- a/asvs-labs/Views/Messages/ShowChat.cshtml
+++ b/asvs-labs/Views/Messages/ShowChat.cshtml
@@ -24,46 +24,50 @@
                         <div class="messages-line">
                             @foreach (var message in Model.MessageList)
                             {
-                                <div class="main-message-box ta-right">
-                                    <div class="message-dt">
-                                        <br />
-                                        <div class="message-inner-dt">
-                                            <p>
+                                <br />
+                                if (message.SendFrom == Model.SendTo)
+                                {
+                                    <div class="main-message-box">
+                                        <div class="messg-usr-img">
+                                            <img src="http://via.placeholder.com/50x50" alt="">
+                                        </div><!--messg-usr-img end-->
+                                        <div class="message-dt">
+                                            <div class="message-inner-dt img-bx">
                                                 @Html.DisplayFor(x => message.Message)
-                                                @Html.DisplayFor(x => message.ImagePath)
-                                            </p>
-                                        </div><!--message-inner-dt end-->
-                                    </div><!--message-dt end-->
-                                    <div class="messg-usr-img">
-                                        <img src="http://via.placeholder.com/50x50" alt="">
-                                    </div><!--messg-usr-img end-->
-                                </div><!--main-message-box end-->
+                                            </div><!--message-inner-dt end-->
+                                            <span>Sat, Aug 23, 1:08 PM</span>
+                                        </div><!--message-dt end-->
+                                    </div><!--main-message-box end-->
+                                }
+                                else
+                                {
+                                    <div class="main-message-box ta-right">
+                                        <div class="message-dt">
+                                            <div class="message-inner-dt">
+                                                <p>@Html.DisplayFor(x => message.Message)</p>
+                                            </div><!--message-inner-dt end-->
+                                            <span>Sat, Aug 23, 1:08 PM</span>
+                                        </div><!--message-dt end-->
+                                        <div class="messg-usr-img">
+                                            <img src="http://via.placeholder.com/50x50" alt="">
+                                        </div><!--messg-usr-img end-->
+                                    </div><!--main-message-box end-->
+                                }
                             }
-                            <div class="main-message-box st3">
-                                <div class="message-dt st3">
-                                    <div class="message-inner-dt">
-                                        <p>Lorem ipsum dolor sit amet</p>
-                                    </div><!--message-inner-dt end-->
-                                    <span>2 minutes ago</span>
-                                </div><!--message-dt end-->
-                                <div class="messg-usr-img">
-                                    <img src="http://via.placeholder.com/50x50" alt="">
-                                </div><!--messg-usr-img end-->
-                            </div><!--main-message-box end-->
                         </div><!--messages-line end-->
                         <div class="message-send-area">
                             @using (Html.BeginForm("StoreMessage", "Messages", FormMethod.Post))
-                             {
-                        <div class="mf-field">
-                            @Html.TextBoxFor(x=>x.Message)
-                            <button type="submit">Send</button>
-                        </div>
-                        <ul>
-                            <li><a href="#" title=""><i class="fa fa-smile-o"></i></a></li>
-                            <li><a href="#" title=""><i class="fa fa-camera"></i></a></li>
-                            <li><a href="#" title=""><i class="fa fa-paperclip"></i></a></li>
-                        </ul>
+                            {
+                                <div class="mf-field">
+                                    @Html.TextBoxFor(x => x.Message, new { @class = "form-control", required = "required" })
+                                    @Html.HiddenFor(x => x.SendTo)
+                                    <button type="submit">Send</button>
+                                </div>
+                                <ul>
+                                    <li><a href="#" title=""><i class="fa fa-paperclip"></i></a></li>
+                                </ul>
                             }
+
                         </div><!--message-send-area end-->
                     </div><!--main-conversation-box end-->
                 </div>
