--- a/asvs-labs/Views/Profiles/Index.cshtml
+++ b/asvs-labs/Views/Profiles/Index.cshtml
@@ -23,7 +23,7 @@
                 <img src="http://via.placeholder.com/91x91" alt="">
                 <h3>@Html.DisplayFor(x => users.UserName)</h3>
                 <ul>
-                  <li><a href="/Messages/ShowChat/@Html.DisplayFor(x => users.userId)" title="" class="message-us"><i class="fa fa-envelope"></i></a></li>
+                  <li><a href="/Messages/ShowChat/@Html.DisplayFor(x => users.UserName)" title="" class="message-us"><i class="fa fa-envelope"></i></a></li>
                 </ul>
               </div>
             </div><!--company_profile_info end-->
