--- a/asvs-labs/Views/Shared/_Layout.cshtml
+++ b/asvs-labs/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
                         <li><a href="#" title="">Terms & Conditions</a></li>
                     </ul>
                           -->
-                          <h3 class="tc"><a href="/authentication" title="">Logout</a></h3>
+                          <h3 class="tc"><a href="/Account/Logout" title="">Logout</a></h3>
                         </div><!--user-account-settingss end-->
                     </div>
                 </div><!--header-data end-->
